// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`decodeQrRequest not parse qr result 1`] = `
Object {
  "address": "",
  "amount": "",
  "currency": "USD",
  "editAddress": "",
  "editAmount": 0,
  "exchangeRate": 0,
  "inputInFiat": false,
  "note": undefined,
  "ticker": "tBTC",
}
`;

exports[`decodeQrRequest parses a qr code result 1`] = `
Object {
  "address": "mhNR7zLchYfX5GtFZ1opW8FeAG63wVjP9D",
  "amount": "10",
  "currency": "USD",
  "editAddress": "",
  "editAmount": 0,
  "exchangeRate": 0,
  "inputInFiat": false,
  "note": "Hello",
  "ticker": "tBTC",
}
`;
